[project]
name = "troshin-15-16-17"
version = "0.1.0"
description = ""
authors = [
    {name = "LutiyCrocodile",email = "morentroshin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "pyqt6 (>=6.9.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
